# ascend_deepsort

./: CMakeLists.txt  README.md  main.cpp
AclProcess/: AclFeatureProcess.cpp  AclFeatureProcess.h  AclYolov5Process.cpp  AclYolov5Process.h  ModelProcess.cpp  ModelProcess.h  Yolov5PostProcess.cpp  Yolov5PostProcess.h  dataType.h
KalmanFilter/: kalmanfilter.h  linear_assignment.h  nn_matching.cpp  nn_matching.h  track.cpp  track.h  tracker.cpp  tracker.h
MunkresAssignment/: hungarianoper.h
MunkresAssignment/munkres/: matrix.h  munkres.h
model/: aipp_rgb_feature.cfg  aipp_rgb_yolo.cfg
script/: modify_yolov5.py
